# python2rust

./: README.md
00_hello_world/python/: hello_world.py  syntax.py
00_hello_world/rust/: hello_world.rs  syntax.rs
01_numbers/python/: cast.py  numbers.py  scope.py  variables.py
01_numbers/rust/: cast.rs  numbers.rs  scope.rs  variables.rs
02_ecosystem/geo/: Cargo.toml
03_tuples_arrays/python/: arrays.py  lists.py  tuples.py
03_tuples_arrays/rust/: arrays.rs  tuples.rs  vectors.rs
04_strings_unicode/python/: multiline.py  strings.py  uppercase.py  utf8.py
04_strings_unicode/rust/: multiline.rs  strings.rs  uppercase.rs  utf8.rs
05_functions/python/: closures.py  fizzbuzz.py  functions.py
05_functions/rust/: closures.rs  fizzbuzz.rs  functions.rs
06_pattern_matching/python/: fizzbuzz.py  pattern_matching.py
06_pattern_matching/rust/: fizzbuzz.rs  pattern_matching.rs
07_structs/python/: classes.py  defaults.py
07_structs/rust/: defaults.rs  structs.rs
08_hashmaps/python/: defaultdict.py  dicts.py
08_hashmaps/rust/: hashmap.rs  maplit.rs  or_insert.rs
09_iterators/python/: iterators.py
0a_error_handling/python/: boilerplate.py  nohandling.py
0a_error_handling/rust/: boilerplate.rs  more_boilerplate.rs  nohandling.rs
0b_traits/python/: defaults.py  iterators.py  super.py
0b_traits/rust/: defaults.rs  return_trait.rs  supertraits.rs
0c_operator_overloading/rust/: operator_overloading.rs
0d_files/python/: binary.py  simple.py
0d_files/rust/: bufread_iterator.rs  bufread_lines.rs  simple.rs
0f_debugging/rust/: fizzbuzz.rs
10_smart_pointers/python/: bintree.py  rc.py
10_smart_pointers/rust/: bintree.rs  rc.rs  smartpointers.rs
11_multithreading/python/: lock_count.py  naive_count.py
11_multithreading/rust/: lock_count.rs  lock_object.rs  naive_count.rs  naive_object.rs
12_modules/python/: main.py  modules.py
12_modules/rust/: foo.rs  main.rs  modules.rs  reexports.rs
13_async/python/: minimal.py
14_context_manager/python/: context_manager.py
14_context_manager/rust/: context_manager.rs
15_pymod_in_rust/python/: monte_carlo_pi.py
15_pymod_in_rust/rust/py_monte_carlo_pi/: Cargo.toml
15_pymod_in_rust/rust/py_monte_carlo_pi/src/: lib.rs
17_regex/python/: io_regex.py  (+1 more)
1c_xml/: cd-list.xml
1e_http_client/rust/http_client/: Cargo.toml
1e_http_client/rust/http_client/src/: lib.rs  main.rs  person.rs
20_sqlite/: import_cases.sh  import_cases.sql
21_postgresql/: import_cases.sh  import_cases.sql
21_postgresql/rust/pg_async/: Cargo.toml
21_postgresql/rust/pg_async/src/: main.rs
22_websockets_server/rust/warp_ws/: Cargo.toml
22_websockets_server/rust/warp_ws/src/: main.rs
23_websockets_client/rust/ws_client/: Cargo.toml
23_websockets_client/rust/ws_client/src/: main.rs
26_plotting/rust/plotters_ex/: Cargo.toml
26_plotting/rust/plotters_ex/src/: main.rs
(+102 files in other folders)
