[package]
name = "py_monte_carlo_pi"
version = "0.1.0"
authors = ["Bedroom Builds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monte_carlo_pi = {path = "../monte_carlo_pi"}

[lib]
name = "montecarlopi"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
