[package]
name = "http_client"
version = "0.1.0"
edition = "2018"
default-run = "http_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
reqwest = {version= "0.11.3", features= ["json"]}
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
tokio = {version = "1.5.0", features = ["full"] }
ureq = {version = "2.1.0", features = ["json"]}
