[package]
name = "pg_async"
version = "0.1.0"
authors = ["Bedroom Builds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.5", features = ["full"] }

tokio-postgres = "0.7.2"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
futures = "0.3.14"
#tokio-postgres = { version = "0.7", features = ["default"] }
