[package]
name = "warp_ws"
version = "0.1.0"
authors = ["Bedroom Builds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
warp = "0.3.1"
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"]}
tokio-stream = { version = "0.1.1", features = ["net"] }
