[package]
name = "ws_client"
version = "0.1.0"
authors = ["Bedroom Builds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.10"
tungstenite = {version = "0.10", default-features = false}
url = "2.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.15"
